force-app/main/default/objects/FS_CIF__c/fields/FS_Freestyle_dispenser_will_go_where__c.field-meta.xml
<CustomField>
    <fullName>FS_Freestyle_dispenser_will_go_where__c</fullName>
    <label>Freestyle dispenser will go where?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same space as legacy</fullName>
            </value>
            <value>
                <fullName>To the LEFT of legacy unit</fullName>
            </value>
            <value>
                <fullName>To the RIGHT of legacy unit</fullName>
            </value>
            <value>
                <fullName>New location Ã¢â‚¬â€œ Explain in comments</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Consult with customer to determine optimum location</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>