force-app/main/default/objects/FS_CIF__c/fields/FS_General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>General Contractor</description>
    <label>General Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.FS_Vendor_Type__c</field>
            <operation>equals</operation>
            <value>General Contractor</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>FS Vendor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIF (General Contractor)</relationshipLabel>
    <relationshipName>CIF6</relationshipName>
    <type>Lookup</type>
</CustomField>