force-app/main/default/objects/FS_CIF__c/fields/FS_General_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor_Name__c</fullName>
    <label>Construction Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 D Foods</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>AJ Development</fullName>
            </value>
            <value>
                <fullName>Ameritech Services</fullName>
            </value>
            <value>
                <fullName>B3 Construction</fullName>
            </value>
            <value>
                <fullName>Berkeley Dogs</fullName>
            </value>
            <value>
                <fullName>BGR</fullName>
            </value>
            <value>
                <fullName>Black Forest Ventures</fullName>
            </value>
            <value>
                <fullName>Blvd. Cinemas</fullName>
            </value>
            <value>
                <fullName>Boardwalk Fries</fullName>
            </value>
            <value>
                <fullName>Bridgeman Foods</fullName>
            </value>
            <value>
                <fullName>Brownbuilld</fullName>
            </value>
            <value>
                <fullName>Cafe Rio</fullName>
            </value>
            <value>
                <fullName>CB Summer Construction Co.</fullName>
            </value>
            <value>
                <fullName>Chris Williams</fullName>
            </value>
            <value>
                <fullName>Clark Contractors</fullName>
            </value>
            <value>
                <fullName>Columbia Construction</fullName>
            </value>
            <value>
                <fullName>Cosi - Construction Manager</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dairy Queen - Corporate Stores</fullName>
            </value>
            <value>
                <fullName>Dan Lowe Contractor</fullName>
            </value>
            <value>
                <fullName>Davaco</fullName>
            </value>
            <value>
                <fullName>Davaco - Dallas</fullName>
            </value>
            <value>
                <fullName>Davaco - Larry Denman</fullName>
            </value>
            <value>
                <fullName>David Mitchell, Inc.</fullName>
            </value>
            <value>
                <fullName>Deck With</fullName>
            </value>
            <value>
                <fullName>Dedica Group</fullName>
            </value>
            <value>
                <fullName>Devier Design Build LLC</fullName>
            </value>
            <value>
                <fullName>DGC</fullName>
            </value>
            <value>
                <fullName>DMS Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>