force-app/main/default/objects/FS_CIF__c/fields/FS_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Headquarters</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>