force-app/main/default/objects/FS_CIF__c/fields/FS_Ice_Fill_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Ice_Fill_Method__c</fullName>
    <description>If Number of Top mounted ice maker is equal to zero, the ice fill method is &#39;manual&#39; else it is &#39;Top Mounted&#39;</description>
    <label>Ice Fill Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Top Mounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>