force-app/main/default/objects/FS_CIF__c/fields/FS_Ice_Maker_Model__c.field-meta.xml
<CustomField>
    <fullName>FS_Ice_Maker_Model__c</fullName>
    <description>Ice Maker Model</description>
    <label>Ice Maker Model</label>
    <length>48</length>
    <type>Text</type>
</CustomField>