force-app/main/default/objects/FS_CIF__c/fields/FS_Is_an_approved_Water_Filter_Installed__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_an_approved_Water_Filter_Installed__c</fullName>
    <description>Is an approved Water Filter Installed?</description>
    <label>Is an approved Water Filter Installed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes Ã¢â‚¬â€œ approved water filter is installed</fullName>
            </value>
            <value>
                <fullName>No - approved make/model to be installed</fullName>
            </value>
            <value>
                <fullName>No - approved make/model that customer will purchase listed below</fullName>
                <isActive>false</isActive>
                <label>No - approved make/model that customer will purchase listed below</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>