force-app/main/default/objects/FS_CIF__c/fields/FS_Is_Bill_to_Address_Same_as_Ship_to__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Bill_to_Address_Same_as_Ship_to__c</fullName>
    <description>Is Bill to Address Same as Ship to</description>
    <label>Is Bill to Address Same as Ship to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>