force-app/main/default/objects/FS_CIF__c/fields/FS_Is_there_a_top_mounted_icemaker__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_there_a_top_mounted_icemaker__c</fullName>
    <label>Is top-mount ice-maker planned for locat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>