force-app/main/default/objects/FS_CIF__c/fields/FS_Is_ths_Sngle_or_Multiple_dispsr_Instl__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_ths_Sngle_or_Multiple_dispsr_Instl__c</fullName>
    <label>Is this Single/Multiple dispenser instal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>