force-app/main/default/objects/FS_CIF__c/fields/FS_Kitchen_Ice_Fill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_Fill_Requirements__c</fullName>
    <label>Type of ice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Approved Soft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>