force-app/main/default/objects/FS_CIF__c/fields/FS_Mail_to_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_to_Address__c</fullName>
    <label>Mail to Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>