force-app/main/default/objects/FS_CIF__c/fields/FS_Mail_to_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_to_City__c</fullName>
    <label>Mail to City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>