force-app/main/default/objects/FS_CIF__c/fields/FS_Mail_to_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_to_Phone__c</fullName>
    <label>Mail to Phone</label>
    <type>Phone</type>
</CustomField>