force-app/main/default/objects/FS_CIF__c/fields/FS_Mail_to_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_to_Zip_Code__c</fullName>
    <label>Mail to Zip Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>