force-app/main/default/objects/FS_CIF__c/fields/FS_MigratedCIFId__c.field-meta.xml
<CustomField>
    <fullName>FS_MigratedCIFId__c</fullName>
    <externalId>true</externalId>
    <label>MigratedCIFId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>