force-app/main/default/objects/FS_CIF__c/fields/FS_Name_of_CO2_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FS_Name_of_CO2_Distributor__c</fullName>
    <label>Name of CO2 Distributor</label>
    <length>64</length>
    <type>Text</type>
</CustomField>