force-app/main/default/objects/FS_CIF__c/fields/FS_Name_of_Sweetener_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FS_Name_of_Sweetener_Distributor__c</fullName>
    <description>Who will be Sweetener provider details.</description>
    <label>Who will be Sweetener provider?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bottler</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>