force-app/main/default/objects/FS_CIF__c/fields/FS_NewRemodelOutletOnlyEquipmentInstall__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyEquipmentInstall__c</fullName>
    <label>Equipment Install Date</label>
    <type>Date</type>
</CustomField>