force-app/main/default/objects/FS_CIF__c/fields/FS_NewRemodelOutletOnlyLineInstallation__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyLineInstallation__c</fullName>
    <label>Line Installation Date</label>
    <type>Date</type>
</CustomField>