force-app/main/default/objects/FS_CIF__c/fields/FS_NewRemodelOutletOnlyProjectedFireUp__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyProjectedFireUp__c</fullName>
    <label>Projected Fire-Up Date</label>
    <type>Date</type>
</CustomField>