force-app/main/default/objects/FS_CIF__c/fields/FS_NewRemodelOutletOnlyProjectedOpening__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyProjectedOpening__c</fullName>
    <label>Projected Opening Date</label>
    <type>Date</type>
</CustomField>