force-app/main/default/objects/FS_CIF__c/fields/FS_No_of_TopMountIceMaker2__c.field-meta.xml
<CustomField>
    <fullName>FS_No_of_TopMountIceMaker2__c</fullName>
    <label>No of Top Mount Ice Maker 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>