force-app/main/default/objects/FS_CIF__c/fields/FS_Number_of_Top_Mount_Ice_Makers__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_Top_Mount_Ice_Makers__c</fullName>
    <formula>IF(ISBLANK(FS_No_of_TopMountIceMaker1__c),0,FS_No_of_TopMountIceMaker1__c) + IF(ISBLANK(FS_No_of_TopMountIceMaker2__c),0,FS_No_of_TopMountIceMaker2__c) +
IF(ISBLANK(FS_No_of_TopMountIceMaker3__c),0,FS_No_of_TopMountIceMaker3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Top-Mount Ice Makers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>