force-app/main/default/objects/FS_CIF__c/fields/FS_On_Boarding_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_On_Boarding_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select On-Boarding Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Headquarters</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Headquarters__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Email</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Contact.Phone</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Contact.FS_Contact_Info_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF (On-Boarding Contact)</relationshipLabel>
    <relationshipName>CIFContact</relationshipName>
    <type>Lookup</type>
</CustomField>