force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_ACN__c</fullName>
    <formula>FS_Account__r.Outlet_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet ACN</label>
    <type>Text</type>
</CustomField>