force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_City__c</fullName>
    <formula>FS_Account__r.ShippingCity</formula>
    <label>Outlet City</label>
    <type>Text</type>
</CustomField>