force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_Name__c</fullName>
    <description>Outlet Contact Name of the Account Information</description>
    <label>Outlet Contact Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>