force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Open_Time__c</fullName>
    <label>Outlet Open Time</label>
    <type>DateTime</type>
</CustomField>