force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Phone__c</fullName>
    <label>Outlet Phone</label>
    <type>Phone</type>
</CustomField>