force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Phone_Number__c</fullName>
    <label>Outlet Phone Number</label>
    <type>Phone</type>
</CustomField>