force-app/main/default/objects/FS_CIF__c/fields/FS_Outlet_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_State__c</fullName>
    <formula>FS_Account__r.ShippingState</formula>
    <label>Outlet State</label>
    <type>Text</type>
</CustomField>