force-app/main/default/objects/FS_CIF__c/fields/FS_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Payment_Type__c</fullName>
    <label>Approved for Program Fee Invoicing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>