force-app/main/default/objects/FS_CIF__c/fields/FS_Pepper_Mix__c.field-meta.xml
<CustomField>
    <fullName>FS_Pepper_Mix__c</fullName>
    <description>Pepper Mix - consists  range percentage</description>
    <label>Pepper Mix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 10%</fullName>
            </value>
            <value>
                <fullName>10% - 20%</fullName>
            </value>
            <value>
                <fullName>&gt; 20%</fullName>
            </value>
            <value>
                <fullName>N/A - Pibb Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>