force-app/main/default/objects/FS_CIF__c/fields/FS_Perform_Second_Site_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FS_Perform_Second_Site_Assessment__c</fullName>
    <label>Perform Second Site Assessment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>