force-app/main/default/objects/FS_CIF__c/fields/FS_Platform1__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform1__c</fullName>
    <label>Platform 1 for Install</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Types</valueSetName>
    </valueSet>
</CustomField>