force-app/main/default/objects/FS_CIF__c/fields/FS_Platform1_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform1_Dispenser__c</fullName>
    <description>Platform1 Dispenser</description>
    <formula>TEXT( FS_Platform1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform1 Dispenser</label>
    <type>Text</type>
</CustomField>