force-app/main/default/objects/FS_CIF__c/fields/FS_Platform1_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform1_Qty__c</fullName>
    <label>Quantity 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>